test: test adjustments